
 o Merge: fixed bug with vertices with no incoming nor outcoming edge.
 o fixed compilation issue with OCaml 3.12.1

version 1.8.3, April 17, 2013
---------------------------
 o new module Merge implementing several different merges of vertices and
   edges into a graph (contributed by Emmanuel Haucourt)
 o fixed DOT parser (contributed by Alex Reece)
 o Topological: fixed bug in presence of disjoint cycles; new implementation
 o new module [Graphml] to export graphs into the graphml format
  (contributed by Pietro Abate)
 o Builder.S now contains functions remove_*.
 o modified Fixpoint module so that it also works with unlabeled
   graphs (contributed by Markus W. Weissmann)
 o support of lablgtk2 installed with findlib (contributed by B. Monate)
 o new module [Dominator] to compute dominators
   (contributed by David Brumley and Ivan Jager)

version 1.8.2, May 12, 2012
---------------------------
 o new module [Path.BellmanFord] implementing Bellman-Ford algorithm
   (contributed by Yuto Takei)
 o new module Contraction implementing edge contraction
   (contributed by Markus W. Weissmann)
 o Gmap: new function [filter_map] (contributed by Markus W. Weissmann)
 o Topological: fix bug when a cycle depends on another cycle. That breaks
   compatibility: the input graph must implement Sig.COMPARABLE instead of
   Sig.HASHABLE
 o new module Topological.Make_stable to iterate over a graph in a **stable**
   topological order. Stable means that the provided ordering only depends on
   the graph topology and on the user's vertices ordering.
 o new module Leaderlist to compute the leader list algorithm (see the Dragon)
   (contributed by Markus W. Weissmann <markus.weissmann@in.tum.de>)

version 1.8.1, October 17, 2011
-------------------------------
 o module Gmap now has a signature for edges (E_SRC) compatible with
   Sig, so that it is easier to apply functor Gmap.Edge
   (contributed by Markus W. Weissmann <markus.weissmann@in.tum.de>)